forgot to load static folder inside contact_succes -sful page

--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Form Success</title>
+        {% load static %}
         <link rel="stylesheet" href="{% static 'webapp/home.css' %}">
         <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
     </head>
