I HATE DJANGO LINKS

--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -12,7 +12,7 @@
         <br/>
         <h2>Click the button below to go back to HOME page :</h2>
         <br/>
-        <button id="home_send" href="{% url './home.html' %}">Go Back</button>
+        <button id="home_send" href="{% url 'home' %}">Go Back</button>
                 <!-- Parallax Effect for Dynamic Starry Background in Body-->
         <script>
             (function() {
