--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -20,7 +20,13 @@
                 left:50%;
                 transform: translate(-50%, -50%);
                 border:none;
+                border-radius:3px;
                 background-color:rgb(33, 33, 255);
+                height:65px;
+                width:auto;
+                font-size:auto;
+                font-family:'Orbitron', sans-serif;
+                color:white;
             }
             #centering {
                 position:relative;
@@ -29,9 +35,9 @@
     </head>
     <body>
         <div id='centering'>
-        <h1>The message was successfully sent.</h1>
+        <h1 id="titles">The message was successfully sent.</h1>
         <br/>
-        <h2>Click the button below to go back to HOME page :</h2>
+        <h2 id="titles">Click the button below to go back to HOME page :</h2>
         <br/>
         <a href="{% url 'home' %}">
             <button id="home_send">Go Back</button>
