--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -9,14 +9,12 @@
         <style>
             #titles{
                 position:absolute;
-                top:50%;
                 left:50%;
                 color:white;
                 transform: translate(-50%, -50%);
             }
             #home_send{
                 position:absolute;
-                top:50%;
                 left:50%;
                 transform: translate(-50%, -50%);
                 border:none;
@@ -24,7 +22,7 @@
                 background-color:rgb(33, 33, 255);
                 height:65px;
                 width:auto;
-                font-size:auto;
+                font-size:50px;
                 font-family:'Orbitron', sans-serif;
                 color:white;
             }
