--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -31,7 +31,7 @@
                 background-color:rgb(33, 33, 255);
                 height:65px;
                 width:auto;
-                font-size:
+                font-size: 50px;
                 font-family:'Orbitron', sans-serif;
                 color:white;
             }
