--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -37,6 +37,8 @@
             }
             #centering {
                 position:relative;
+                width: 100%;
+                height: 100%;
             }
         </style>
     </head>
