--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -35,7 +35,7 @@
                 font-family:'Orbitron', sans-serif;
                 color:white;
             }
-            #centering {
+            #body {
                 position:relative;
                 width: 100%;
                 height: 100%;
@@ -43,7 +43,6 @@
         </style>
     </head>
     <body>
-        <div id='centering'>
         <h1 id="title1">The message was successfully sent.</h1>
         <br/>
         <h2 id="title2">Click the button below to go back to HOME page :</h2>
@@ -51,7 +50,6 @@
         <a href="{% url 'home' %}">
             <button id="home_send">Go Back</button>
         </a>            
-        </div>    
         <!-- Parallax Effect for Dynamic Starry Background in Body-->
         <script>
             (function() {
