--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -37,14 +37,19 @@
                 width: 100%;
                 height: 100%;
             }
+            #linkception {
+                position:relative;
+                top:50%;
+                left:50%;
+                transform:translate(-50%, -50%);
+            }
+            
         </style>
     </head>
     <body>
         <h1 id="title1">The message was successfully sent.</h1>
-        <br/>
         <h2 id="title2">Click the button below to go back to HOME page :</h2>
-        <br/>
-        <a href="{% url 'home' %}">
+        <a id='linkception' href="{% url 'home' %}">
             <button id="home_send">Go Back</button>
         </a>            
         <!-- Parallax Effect for Dynamic Starry Background in Body-->
