--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -36,14 +36,8 @@
                 position:relative;
                 width: 100%;
                 height: 100%;
-            }
-            #linkception {
-                position:relative;
-                top:50%;
-                left:50%;
-                transform:translate(-50%, -50%);
-            }
-            
+                text-align:center;
+            }     
         </style>
     </head>
     <body>
