--- a/webserver/mysite/webapp/templates/webapp/contact_successful.html
+++ b/webserver/mysite/webapp/templates/webapp/contact_successful.html
@@ -25,7 +25,7 @@
                 top:35%;
                 border:none;
                 border-radius:3px;
-                background-color:rgb(33, 33, 255);
+                background-color:rgb(60, 145, 255);
                 height:30px;
                 width:auto;
                 font-size: 25px;
@@ -33,6 +33,13 @@
                 color:white;
                 text-align:center;
                 cursor:pointer;
+            }
+            #home_send:hover{
+                background-color:rgb(42, 107, 190);
+            }
+            #home_send:active{
+                background-color:rgb(42, 107, 190);
+                box-shadow: 5px 5px 10px rgb(60, 145, 255);
             }
             #body {
                 position:relative;
