--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -19,13 +19,14 @@ div {
   height: calc(var(--r) * var(--u) * 2);
   place-self: center;
   position: relative;
-  
+
+  /* Illusion of 3D sphere tilt */
   transform:
     rotateX(45deg)
     rotateY(45deg)
     rotateZ(15deg);
 
-  /* Uncomment if you want to spin */
+  /* Uncomment to make it spin */
   /* animation: rotates 50s linear infinite; */
 }
 
@@ -33,11 +34,11 @@ div {
   position: absolute;
   height: var(--h);
   border: 1px solid;
-  
+
   --d: calc(var(--r) * var(--dp));
   /* Replace pow/sqrt with simpler calc approximation or precompute */
   --w: calc(2 * var(--r) * var(--u)); /* placeholder, adjust if needed */
-  
+
   width: var(--w);
   top: calc(50% - (var(--d) * var(--s) * var(--u)));
   left: calc(50% - var(--w) / 2);
@@ -48,13 +49,6 @@ div {
   height: var(--h);
   --w: calc(var(--r) * var(--u) * 2);
   top: 50%;
-}
-
-.globe {
-  transform:
-    rotateX(45deg)
-    rotateY(45deg)
-    rotateZ(15deg);
 }
 
 .h,
@@ -94,13 +88,9 @@ div {
 
 @keyframes rotates {
   from {
-    transform: rotateX(0) rotateY(0) rotateZ(0);
+    transform: rotateX(45deg) rotateY(45deg) rotateZ(15deg);
   }
   to {
-    transform: rotateX(360deg) rotateY(720deg) rotateZ(360deg);
+    transform: rotateX(405deg) rotateY(765deg) rotateZ(375deg);
   }
-}
-
-.globe {
-    /* animation: rotates 50s linear infinite; */
 }
