--- a/webserver/mysite/webapp/static/webapp/test_for_animation.scss
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.scss
@@ -1,26 +1,27 @@
+
 body {
   min-height: 100vh;
   margin: 0;
   display: grid;
   background: #1f2020;
 }
-
 div {
   transform-style: preserve-3d;
   box-sizing: border-box;
 }
-
 .globe {
   --r: 25;
   --u: 1vmin;
   --h: 2px;
+  //border: 1px solid;
   border-radius: 50%;
   width: calc(var(--r) * var(--u) * 2);
   height: calc(var(--r) * var(--u) * 2);
   place-self: center;
   position: relative;
-  transform-style: preserve-3d;
-  transform: rotateX(182.5deg) rotateY(362.5deg) rotateZ(182.5deg);
+  /*background-image: 
+    linear-gradient(90deg, #fc33 50%, #cf33 50%);
+  */
 }
 
 .line {
@@ -29,30 +30,36 @@ div {
   border: 1px solid;
   
   --d: calc(var(--r) * var(--dp));
-  --w: calc(2 * var(--r) * var(--u));
+  
+  --w: calc(2 * sqrt(pow(var(--r),2) - pow(var(--d), 2)) * var(--u));
   
   width: var(--w);
   top: calc(50% - (var(--d) * var(--s) * var(--u)));
   left: calc(50% - var(--w) / 2);
   color: #aaa5;
 }
-
 .radius {
   height: var(--h);
   --w: calc(var(--r) * var(--u) * 2);
   top: 50%;
 }
 
-.h,
-.v {
+.globe {
+  
+  transform:
+    rotatex(45deg)
+    rotatey(45deg)
+    rotatez(15deg)
+}
+.h,.v {
   --h: var(--w);
   border-radius: 100vmax;
   background-color: #3cf3;
   top: 0;
   left: 0;
   box-shadow: 0 0 1em 1em #0000;
+  
 }
-
 .h {
   translate: 
     calc(var(--r) * var(--u) - var(--w) / 2)
@@ -60,19 +67,37 @@ div {
     calc((var(--d) * var(--s) * var(--u)));
   --del: 2s;
   animation: flash linear var(--del) infinite;
-  animation-delay: calc(var(--c) * var(--del) / var(--t, 7));
+  animation-delay: calc(var(--c) * var(--del) / var(--t));
 }
-
-/* Animation */
+//only for animation.
+$t:7;//match the number in the pug
+$ct: 100 / (2 * $t + 1);
 @keyframes flash {
-  0%, 28% {
+  0%, #{$ct * 2%}{
     color: #aaa3;
     background-color: #3cf3;
     box-shadow: 0 0 1em 1em #0000;
   }
-  14% {
+  #{$ct * 1%}{
     color: #f003;
     background-color: #39FF1480;
     box-shadow: 0 0 1em 1em #39FF1430;
   }
+}
+@keyframes rotates{
+  from {
+    transform: 
+      rotatex(0)
+      rotatey(0)
+      rotatez(0)
+  }
+  to {
+    transform: 
+      rotatex(360deg)
+      rotatey(720deg)
+      rotatez(360deg)
+  }
+}
+.globe {
+  //animation: rotates 50s linear infinite;
 }
