--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -1,11 +1,12 @@
-- var t = 7
+{% load sass_tags %}
+{% __pypugjs_set t = 7 %}
 head
-    {% load sass_tags %}
-    link(rel="stylesheet", href="{% sass_src 'webapp/test_for_animation.scss' %}")
-body
-  .globe(style='--t:' + (2 * t + 1))
-    .line.radius.h(style='--c:' + t)
-    - for (var i = 1, c = t + 1; i < t; i++, c++)
-      .line.h(style='--dp:' + (i / t) + '; --s:-1; --c:' + c)
-    - for (var i = 1, c = t - 1; i < t; i++, c--)
-      .line.h(style='--dp:' + (i / t) + '; --s:1; --c:' + c)
+  link(rel="stylesheet", href="{% sass_src 'webapp/test_for_animation.scss' %}")
+.globe(style='--t:' + (2 * t + 1))
+  .line.radius.h(style='--c:' + t)
+  - for i in range(1, t)
+    - c = t + i
+    .line.h(style='--dp:' + (i / t) + '; --s:-1; --c:' + c)
+  - for i in range(1, t)
+    - c = t - i
+    .line.h(style='--dp:' + (i / t) + '; --s:1; --c:' + c)
