--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -1,10 +1,13 @@
-- t = 7
-
-.globe(style='--t:' + str(2 * t + 1))
-  .line.radius.h(style='--c:' + str(t))
-  - for i in range(1, t)
-    - c = t + i
-    .line.h(style='--dp:' + str(i / t) + '; --s:-1; --c:' + str(c))
-  - for i in range(1, t)
-    - c = t - i
-    .line.h(style='--dp:' + str(i / t) + '; --s:1; --c:' + str(c))
+<div style="--t: {{ 2*t+1 }}" class="globe">
+  <div style="--c: {{ t }}" class="line radius h"></div>
+  {% for i in range(1, t) %}
+    {% with c=t+i %}
+      <div style="--dp: {{ i/t }}; --s:-1; --c: {{ c }}" class="line h"></div>
+    {% endwith %}
+  {% endfor %}
+  {% for i in range(1, t) %}
+    {% with c=t-i %}
+      <div style="--dp: {{ i/t }}; --s:1; --c: {{ c }}" class="line h"></div>
+    {% endwith %}
+  {% endfor %}
+</div>
