--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -1,15 +1,11 @@
 <div style="--t: {{ t2_plus_1 }}" class="globe">
 <div style="--c: {{ t }}" class="line radius h"></div>
 
-{% for i in range(1, t) %}
-{% with c=t+i %}
-<div style="--dp: {{ i/t }}; --s:-1; --c: {{ c }}" class="line h"></div>
-{% endwith %}
+{% for line in positive_lines %}
+<div style="--dp: {{ line.dp }}; --s:-1; --c: {{ line.c }}" class="line h"></div>
 {% endfor %}
 
-{% for i in range(1, t) %}
-{% with c=t-i %}
-<div style="--dp: {{ i/t }}; --s:1; --c: {{ c }}" class="line h"></div>
-{% endwith %}
+{% for line in negative_lines %}
+<div style="--dp: {{ line.dp }}; --s:1; --c: {{ line.c }}" class="line h"></div>
 {% endfor %}
 </div>
