forgot the icon + typo in the css' link

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -1,5 +1,6 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'webapp/test_for_animation.css' %}">
+<link rel="stylesheet" href="{% static 'webapp/test_for_animation.scss' %}">
+<link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
 
 <div style="--t: {{ t2_plus_1 }}" class="globe">
 <div style="--c: {{ t }}" class="line radius h"></div>
