--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -1,27 +1,30 @@
-
 body {
   min-height: 100vh;
   margin: 0;
   display: grid;
   background: #1f2020;
 }
+
 div {
   transform-style: preserve-3d;
   box-sizing: border-box;
 }
+
 .globe {
   --r: 25;
   --u: 1vmin;
   --h: 2px;
-  //border: 1px solid;
+  /* border: 1px solid; */
   border-radius: 50%;
   width: calc(var(--r) * var(--u) * 2);
   height: calc(var(--r) * var(--u) * 2);
   place-self: center;
   position: relative;
-  /*background-image: 
-    linear-gradient(90deg, #fc33 50%, #cf33 50%);
-  */
+  transform:
+    rotatex(45deg)
+    rotatey(45deg)
+    rotatez(15deg);
+  /* animation: rotates 50s linear infinite; */
 }
 
 .line {
@@ -30,7 +33,6 @@ div {
   border: 1px solid;
   
   --d: calc(var(--r) * var(--dp));
-  
   --w: calc(2 * sqrt(pow(var(--r),2) - pow(var(--d), 2)) * var(--u));
   
   width: var(--w);
@@ -38,28 +40,22 @@ div {
   left: calc(50% - var(--w) / 2);
   color: #aaa5;
 }
+
 .radius {
   height: var(--h);
   --w: calc(var(--r) * var(--u) * 2);
   top: 50%;
 }
 
-.globe {
-  
-  transform:
-    rotatex(45deg)
-    rotatey(45deg)
-    rotatez(15deg)
-}
-.h,.v {
+.h, .v {
   --h: var(--w);
   border-radius: 100vmax;
   background-color: #3cf3;
   top: 0;
   left: 0;
   box-shadow: 0 0 1em 1em #0000;
-  
 }
+
 .h {
   translate: 
     calc(var(--r) * var(--u) - var(--w) / 2)
@@ -69,35 +65,32 @@ div {
   animation: flash linear var(--del) infinite;
   animation-delay: calc(var(--c) * var(--del) / var(--t));
 }
-//only for animation.
-$t:7;//match the number in the pug
-$ct: 100 / (2 * $t + 1);
+
+/* Animation keyframes - assuming t=7 from your SCSS */
 @keyframes flash {
-  0%, #{$ct * 2%}{
+  0%, 13.33% { /* 2 * (100 / (2 * 7 + 1)) = 13.33% */
     color: #aaa3;
     background-color: #3cf3;
     box-shadow: 0 0 1em 1em #0000;
   }
-  #{$ct * 1%}{
+  6.67% { /* 1 * (100 / (2 * 7 + 1)) = 6.67% */
     color: #f003;
     background-color: #39FF1480;
     box-shadow: 0 0 1em 1em #39FF1430;
   }
 }
-@keyframes rotates{
+
+@keyframes rotates {
   from {
     transform: 
       rotatex(0)
       rotatey(0)
-      rotatez(0)
+      rotatez(0);
   }
   to {
     transform: 
       rotatex(360deg)
       rotatey(720deg)
-      rotatez(360deg)
+      rotatez(360deg);
   }
-}
-.globe {
-  //animation: rotates 50s linear infinite;
 }
