--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -1,6 +1,7 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'webapp/test_for_animation.css' %}">
 <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
+<title>Explore the Skies !</title>
 
 <div style="--t: {{ t2_plus_1 }}" class="globe">
 <div style="--c: {{ t }}" class="line radius h"></div>
