--- a/webserver/mysite/webapp/templates/webapp/home.html
+++ b/webserver/mysite/webapp/templates/webapp/home.html
@@ -24,8 +24,8 @@
                 </form>
                 <a href="{% url 'login' %}" id="navLOG">&nbsp;Log in</a>
                 {% endif %}
-                <a href="" id="navUSE">Explore the Skies</a>
-                <a href="{% url 'test_for_animation' %}" id="navABO">About</a>
+                <a href="{% url 'test_for_animation' %}" id="navUSE">Explore the Skies</a>
+                <a href="" id="navABO">About</a>
                 <a href="{% url 'contact' %}" id="navCON">Contact&nbsp;Us</a> 
             </div>
         </nav>
