--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -30,6 +30,7 @@ div {
   position: absolute;
   top: 50%;           /* Y position of orbit center */ /* CHANGE THE X CENTER OF THE REVOLUTION */
   left: 50%;          /* X position of orbit center */ /* CHANGE THE Y CENTER OF THE REVOLUTION */
+  transform:translate(-50%, -50%);
   transform-origin: -100px 0; /* CHANGE THIS TO CHANGE THE RADIUS OF THE REVOLUTION */
   
   /* ORBIT ANIMATION */
@@ -43,7 +44,6 @@ div {
   
   --d: calc(var(--r) * var(--dp));
   --w: calc(2 * sqrt(pow(var(--r),2) - pow(var(--d), 2)) * var(--u));
-  
   width: var(--w);
   top: calc(50% - (var(--d) * var(--s) * var(--u)));
   left: calc(50% - var(--w) / 2);
