--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -11,39 +11,31 @@ div {
 }
 
 .globe {
-  --r: 10; /* CHANGE THIS TO CHANGE THE RADIUS OF THE SPHERE */
+  --r: 10;
   --u: 1vmin;
   --h: 2px;
-  /* border: 1px solid; */
   border-radius: 50%;
   width: calc(var(--r) * var(--u) * 2);
   height: calc(var(--r) * var(--u) * 2);
-  place-self: center;
-  position: relative;
-  transform:
-    rotatex(45deg)
-    rotatey(45deg)
-    rotatez(15deg);
-  animation: rotates 10s linear infinite; /* CHANGE THIS TO CHANGE THE SPEED OF THE ROTATION */
-    
+  
   /* ORBIT POSITIONING */
-  --cc: -1; /* NEGATIVE MEANS CCW && POSITIVE MEANS CW */
-  --RevR: 200; /* Radius of Revolution */
-  --xCenter: 50; /* X Center */
-  --yCenter: 50; /* Y Center */
-  --xStarting: var(--xCenter) - (var(--RevR)/1080) * var(--cc) * 100 / 2; /* Getting the X Starting Point of the Revolution according to the center and direction */
-  --yStarting: var(--yCenter) - (var(--RevR)/1080) * 100 / 2; /* Getting the Y Starting Point of the Revolution according to the center and direction */
+  --cc: -1;
+  --RevR: 200;
+  --xCenter: 50;
+  --yCenter: 50;
+  --xStarting: var(--xCenter) - (var(--RevR)/1080) * var(--cc) * 100 / 2;
+  --yStarting: var(--yCenter) - (var(--RevR)/1080) * 100 / 2;
 
   position: absolute;
-  top: calc(var(--yStarting) * 1%); /* Y position of orbit center */ /* CHANGE THE X STARTING POINT OF THE REVOLUTION */
-  left: calc(var(--xStarting) * 1%); /* X position of orbit center */ /* CHANGE THE Y STARTING OF THE REVOLUTION */
-  transform:translate(-50%, -50%); /* To offset the planet's dimensions against its orbit */
-
-  transform-origin: calc(var(--cc) * 1px) 0; /* CHANGE THIS TO CHANGE THE RADIUS OF THE ORBIT */
+  top: calc(var(--yStarting) * 1%);
+  left: calc(var(--xStarting) * 1%);
+  transform-origin: calc(var(--cc) * var(--RevR) * 1px) 0;
   
-  /* ORBIT ANIMATION */
-  animation: orbit 10s linear infinite; /* CHANGE THIS TO CHANGE THE SPEED OF THE ORBIT */
+  /* COMBINE BOTH ANIMATIONS */
+  animation: 
+    orbit-and-rotate 10s linear infinite;
 }
+
 
 .line {
   position: absolute;
@@ -97,27 +89,20 @@ div {
   }
 }
 
-@keyframes rotates {
+/* COMBINED KEYFRAMES - ORBIT + ROTATION */
+@keyframes orbit-and-rotate {
   from {
     transform: 
-      rotatex(0)
-      rotatey(0)
-      rotatez(0);
+      translate(-50%, -50%)
+      rotate(0deg)
+      rotatex(45deg) rotatey(45deg) rotatez(15deg)
+      rotatex(0deg) rotatey(0deg) rotatez(0deg);
   }
   to {
     transform: 
-      rotatex(360deg)
-      rotatey(720deg)
-      rotatez(360deg);
-  }
-}
-
-/* ORBITING KEYFRAMES */
-@keyframes orbit {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+      translate(-50%, -50%)
+      rotate(360deg)
+      rotatex(45deg) rotatey(45deg) rotatez(15deg)
+      rotatex(360deg) rotatey(720deg) rotatez(360deg);
   }
 }
