--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -27,8 +27,8 @@ div {
   --yStarting: var(--yCenter) - (var(--RevR)/1080) * 100 / 2;
 
   position: absolute;
-  top: calc(var(--yStarting) * 100%);
-  left: calc(var(--xStarting) * 100%);
+  top: 40%; /* calc(var(--yStarting) * 100%) */
+  left: 60%; /* calc(var(--xStarting) * 100%) */
   transform:translate(-50%, -50%);
   transform-origin: calc(var(--cc) * var(--RevR) * 1px) 0;
   
