--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -27,7 +27,7 @@ div {
   --yStarting: var(--yCenter) - (var(--RevR)/1080) * 100 / 2;
 
   position: absolute;
-  top: 50%; /* calc(var(--yStarting) * 100%) */
+  top: calc(var(--yStarting) * 100%);
   left: 50%; /* calc(var(--xStarting) * 100%) */
   transform:translate(-50%, -50%);
   transform-origin: calc(var(--cc) * var(--RevR) * 1px) 0;
