--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -27,11 +27,11 @@ div {
   animation: rotates 10s linear infinite; /* CHANGE THIS TO CHANGE THE SPEED OF THE ROTATION */
     
   /* ORBIT POSITIONING */
-  --cc:-1;
+  --cc:1;
   position: absolute;
   top: 50%;           /* Y position of orbit center */ /* CHANGE THE X CENTER OF THE REVOLUTION */
   left: 50%;          /* X position of orbit center */ /* CHANGE THE Y CENTER OF THE REVOLUTION */
-  transform:translate(calc(-50% * var(--cc)));
+  transform:translate(calc(50% * var(--cc)) 0);
   transform-origin: calc(var(--cc) * 100px) 0; /* CHANGE THIS TO CHANGE THE RADIUS OF THE REVOLUTION */
   
   /* ORBIT ANIMATION */
