removed unnecessary newline

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -89,8 +89,7 @@ box-shadow: 0 0 1em 1em #0000;
 }
 
 .h {
-translate: 
-calc(var(--r) * var(--u) - var(--w) / 2)
+translate: calc(var(--r) * var(--u) - var(--w) / 2)
 calc(var(--r) * var(--u) - var(--w) / 2)
 calc((var(--d) * var(--s) * var(--u)));
 --del: 0.5s; /* Speed of the flash effect */
