removed two unnecessary newlines after transform

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -117,14 +117,12 @@ box-shadow: 0 0 1em 1em #39FF1430;
 
 @keyframes rotates {
 from {
-transform: 
-rotatex(0)
+transform: rotatex(0)
 rotatey(0)
 rotatez(0);
 }
 to {
-transform: 
-rotatex(360deg)
+transform: rotatex(360deg)
 rotatey(720deg)
 rotatez(360deg);
 }
