--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -8,19 +8,17 @@ body {
     perspective: 1000px; /* Add perspective for 3D effect */
     overflow: hidden;
 }
-
 div {
     transform-style: preserve-3d;
     box-sizing: border-box;
 }
-
 /* ORBITING CONTAINER - This element handles the revolution around a central point */
-.orbit-container {
+.MERCURY {
     /* Customize the orbit properties here */
-    --orbit-radius: 150px; /* Distance from the orbit center */
-    --orbit-speed: 10s;     /* Speed of the revolution */
-    --orbit-center-x: 50%;  /* X position of the orbit's center */
-    --orbit-center-y: 50%;  /* Y position of the orbit's center */
+    --orbit-radius: 10px; /* Distance from the orbit center */ /* ORBIT RADIUS */
+    --orbit-speed: 5s;     /* Speed of the revolution */ /* ORBIT SPEED */
+    --orbit-center-x: 50%;  /* X position of the orbit's center */ /* ORBIT X */
+    --orbit-center-y: 50%;  /* Y position of the orbit's center */ /* ORBIT Y */
     
     position: absolute;
     top: var(--orbit-center-y);
@@ -29,10 +27,9 @@ div {
     transform: translate(-50%, -50%); /* Center the container itself */
     animation: orbit-animation var(--orbit-speed) linear infinite;
 }
-
 /* GLOBE - This element is a child of the orbit container and handles its own rotation */
 .globe {
-    --r: 10; /* Radius of the sphere */
+    --r: 1; /* SPHERE RADIUS */
     --u: 1vmin;
     --h: 2px;
     
@@ -48,7 +45,6 @@ div {
     --rotation-speed: 10s;
     animation: rotates var(--rotation-speed) linear infinite;
 }
-
 /* Styles for the inner lines of the globe */
 .line {
     position: absolute;
@@ -62,22 +58,19 @@ div {
     left: calc(50% - var(--w) / 2);
     color: #aaa5;
 }
-
 .radius {
     height: var(--h);
     --w: calc(var(--r) * var(--u) * 2);
     top: 50%;
 }
-
 .h, .v {
     --h: var(--w);
     border-radius: 100vmax;
-    background-color: rgba(0, 128, 255, 0.2); /* Base color of the sphere */
+    background-color: rgba(14, 14, 15, 0.2); /* SPHERE COLOR */
     top: 0;
     left: 0;
     box-shadow: 0 0 1em 1em #0000;
 }
-
 .h {
     translate: 
         calc(var(--r) * var(--u) - var(--w) / 2)
@@ -87,11 +80,9 @@ div {
     animation: flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
 }
-
 /* The horizontal lines are created with SCSS and a loop, which can be approximated with a set of elements */
 /* For this example, we'll assume a single globe for simplicity, but you would duplicate the .line and .h elements
    in the HTML and adjust the --c variable to simulate the SCSS loop. */
-
 /* Animation keyframes */
 @keyframes flash {
     0%, 13.33% {
@@ -101,11 +92,10 @@ div {
     }
     6.67% {
         color: #f003;
-        background-color: #04ff0081; /* Color of the flash */
+        background-color: #ffffff81; /* FLASH COLOR */
         box-shadow: 0 0 1em 1em #39FF1430;
     }
 }
-
 @keyframes rotates {
     from {
         transform: 
@@ -120,7 +110,6 @@ div {
             rotatez(360deg);
     }
 }
-
 @keyframes orbit-animation {
     from {
         transform: rotate(0deg) translate(calc(var(--orbit-radius) * -1), 0);
