--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -4,12 +4,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Explore the Skies!</title>
+<title>Explore the Skies !</title>
 <link rel="stylesheet" href="{% static 'webapp/test_for_animation.css' %}">
 <link rel="icon" type="image/x-icon" href="{% static 'webapp/perfect_logo.png' %}">
 </head>
 <body>
-<div class="orbit-container">
+<div class="MERCURY">
 <div style="--t: {{ t2_plus_1 }}" class="globe">
 <div style="--c: {{ t }}" class="line radius h"></div>
 {% for line in positive_lines %}
