--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -4,7 +4,8 @@ body {
     margin: 0;
     display: grid;
     place-items: center;
-    background: #1f2020;
+    background-image: url('STARRY.gif');
+    background-repeat:repeat;
     perspective: 1000px; /* Add perspective for 3D effect */
     overflow: hidden;
 }
@@ -76,7 +77,7 @@ div {
         calc(var(--r) * var(--u) - var(--w) / 2)
         calc(var(--r) * var(--u) - var(--w) / 2)
         calc((var(--d) * var(--s) * var(--u)));
-    --del: 0.5s; /* Speed of the flash effect */
+    --del: 0.5s; /* FLASH SPEED */
     animation: flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
 }
@@ -91,7 +92,7 @@ div {
         box-shadow: 0 0 1em 1em #0000;
     }
     6.67% {
-        color: #f003;
+        color: rgba(255, 255, 255, 0.2);
         background-color: #ffffff81; /* FLASH COLOR */
         box-shadow: 0 0 1em 1em #ffffff30; /* PLANET GLOW */
     }
