Idk pug is weird

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -20,9 +20,7 @@
 {% endfor %}
 </div>
 </div>
-<!-- Parallax Effect for Dynamic Starry Background in Body-->
-<script>
-(function() {
+<script>(function() {
 // Add event listener
 document.addEventListener("mousemove", parallax_body);
 const elem = document.querySelector("body");
