--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -8,6 +8,7 @@ body {
     place-items: center;
     background-image: url('STARRY.gif');
     background-repeat: repeat;
+    background-position:center;
     perspective: 1000px;
     overflow: hidden;
 }
@@ -22,7 +23,7 @@ div {
 /* ---------------------------------- */
 .MERCURY {
     /* Orbiting Container */
-    --orbit-radius: 10px;
+    --orbit-radius: 100px;
     --orbit-speed: 5s;
     --orbit-center-x: 50%;
     --orbit-center-y: 50%;
@@ -37,13 +38,12 @@ div {
 
 .mercury-globe {
     /* Globe Properties */
-    --r: 1; /* SPHERE RADIUS */
-    --u: 1vmin;
+    --r: 10px; /* SPHERE RADIUS IN PIXELS */
     --h: 2px;
     
     border-radius: 50%;
-    width: calc(var(--r) * var(--u) * 2);
-    height: calc(var(--r) * var(--u) * 2);
+    width: calc(var(--r) * 2);
+    height: calc(var(--r) * 2);
     position: relative;
     
     transform: rotatex(45deg) rotatey(45deg);
@@ -54,12 +54,13 @@ div {
 .mercury-globe .h {
     /* Flash Animation Trigger */
     translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+        calc(var(--r) - var(--w) / 2)
+        calc(var(--r) - var(--w) / 2)
+        calc(var(--d) * var(--s));
     --del: 0.5s;
     animation: mercury-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
+    background-color: rgba(14, 14, 15, 0.33); /* SPHERE COLOR */
 }
 
 @keyframes mercury-flash {
@@ -95,13 +96,12 @@ div {
 
 .sun-globe {
     /* Globe Properties */
-    --r: 50; /* SPHERE RADIUS */
-    --u: 1vmin;
+    --r: 200px; /* SPHERE RADIUS IN PIXELS */
     --h: 2px;
     
     border-radius: 50%;
-    width: calc(var(--r) * var(--u) * 2);
-    height: calc(var(--r) * var(--u) * 2);
+    width: calc(var(--r) * 2);
+    height: calc(var(--r) * 2);
     position: relative;
     
     transform: rotatex(45deg) rotatey(45deg);
@@ -112,12 +112,13 @@ div {
 .sun-globe .h {
     /* Flash Animation Trigger */
     translate: 
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc(var(--r) * var(--u) - var(--w) / 2)
-        calc((var(--d) * var(--s) * var(--u)));
+        calc(var(--r) - var(--w) / 2)
+        calc(var(--r) - var(--w) / 2)
+        calc(var(--d) * var(--s));
     --del: 0.5s;
     animation: sun-flash linear var(--del) infinite;
     animation-delay: calc(var(--c) * var(--del) / var(--t));
+    background-color: rgba(255, 255, 0, 0.33); /* SPHERE COLOR */
 }
 
 @keyframes sun-flash {
@@ -142,15 +143,15 @@ div {
     border: 1px solid;
     
     --d: calc(var(--r) * var(--dp));
-    --w: calc(2 * sqrt(pow(var(--r),2) - pow(var(--d), 2)) * var(--u));
+    --w: calc(2 * sqrt(pow(var(--r),2) - pow(var(--d), 2)));
     width: var(--w);
-    top: calc(50% - (var(--d) * var(--s) * var(--u)));
+    top: calc(50% - (var(--d) * var(--s)));
     left: calc(50% - var(--w) / 2);
     color: #aaa5;
 }
 .radius {
     height: var(--h);
-    --w: calc(var(--r) * var(--u) * 2);
+    --w: calc(var(--r) * 2);
     top: 50%;
 }
 .h, .v {
@@ -161,7 +162,8 @@ div {
     box-shadow: 0 0 1em 1em #0000;
 }
 .globe .h, .globe .v {
-    background-color: rgba(14, 14, 15, 0.33); /* Default sphere color */
+    /* This rule is no longer needed as each globe now defines its own background-color */
+    /* background-color: rgba(14, 14, 15, 0.33); */
 }
 
 /* ---------------------------------- */
