--- a/webserver/mysite/webapp/static/webapp/test_for_animation.css
+++ b/webserver/mysite/webapp/static/webapp/test_for_animation.css
@@ -7,6 +7,7 @@ body {
     display: grid;
     place-items: center;
     background-image: url('STARRY.gif');
+    background-repeat: repeat;
     background-position:center;
     perspective: 1000px;
     overflow: hidden;
