--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -34,8 +34,8 @@
 </div>
 </div>
 <!-- Parallax Effect for Dynamic Starry Background -->
-<script>
-(function() {
+<script>(function() 
+{
 document.addEventListener("mousemove", parallax_body);
 const elem = document.querySelector("body");
 
