small indentation fix bc of PUG

--- a/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
+++ b/webserver/mysite/webapp/templates/webapp/test_for_animation.pug
@@ -42,8 +42,8 @@
 </div>
 
 <!-- Parallax Effect for Dynamic Starry Background -->
-<script>
-(function() {
+<script>(function() 
+{
 document.addEventListener("mousemove", parallax_body);
 const elem = document.querySelector(".parallax-bg"); // Target the new background div
 
